--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <h1>
+        <span id="Hour">00 :</span>
+        <span id="Min">00 :</span>
+        <span id="Sec">00</span>
+    </h1>
+
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
     <button onclick="reset()">Reset</button>
 
     <script src="./index.js"></script>
 </body>
+
 </html>
