--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>
-        <span id="Hour">00 :</span>
-        <span id="Min">00 :</span>
-        <span id="Sec">00</span>
-    </h1>
-
-    <button onclick="start()">Start</button>
-    <button onclick="stop()">Stop</button>
-    <button onclick="reset()">Reset</button>
+    <div class="stopwatch">
+        <span id="display">00:00:00</span>
+        <div class="controls">
+            <button onclick="start()">Start</button>
+            <button onclick="stop()">Stop</button>
+            <button onclick="reset()">Reset</button>
+        </div>
+    </div>
 
     <script src="./index.js"></script>
 </body>
