--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="stopwatch">
-        <span id="display">00:00:00</span>
+        <span id="displayTime">00:00:00</span>
         <div class="controls">
             <button onclick="start()">Start</button>
             <button onclick="stop()">Stop</button>
